@@ -2,33 +2,37 @@ package com.hcmute.fit.toeicrise.services.impl;
 
 import com.hcmute.fit.toeicrise.commons.constants.Constant;
 import com.hcmute.fit.toeicrise.commons.utils.CloudinaryUtil;
-import com.hcmute.fit.toeicrise.commons.utils.ShuffleUtil;
-import com.hcmute.fit.toeicrise.dtos.requests.minitest.MiniQuestionGroupRequest;
-import com.hcmute.fit.toeicrise.dtos.requests.minitest.MiniTestRequest;
-import com.hcmute.fit.toeicrise.dtos.requests.minitest.UserAnswerMiniTestRequest;
-import com.hcmute.fit.toeicrise.dtos.requests.question.QuestionExcelRequest;
-import com.hcmute.fit.toeicrise.dtos.requests.question.QuestionGroupUpdateRequest;
+import com.hcmute.fit.toeicrise.commons.utils.HelperUtil;
+import com.hcmute.fit.toeicrise.dtos.requests.question.*;
 import com.hcmute.fit.toeicrise.dtos.responses.learner.LearnerTestPartResponse;
-import com.hcmute.fit.toeicrise.dtos.responses.learner.LearnerTestQuestionGroupResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.learner.LearnerTestQuestionGroupWithoutTranscriptResponse;
 import com.hcmute.fit.toeicrise.dtos.responses.learner.LearnerTestQuestionResponse;
-import com.hcmute.fit.toeicrise.dtos.responses.minitest.*;
+import com.hcmute.fit.toeicrise.dtos.responses.learner.speaking.LearnerSpeakingPartDetailResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.learner.speaking.LearnerSpeakingQuestionDetailResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.learner.speaking.LearnerSpeakingQuestionGroupDetailResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.learner.writing.LearnerWritingPartDetailResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.learner.writing.LearnerWritingQuestionDetailResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.learner.writing.LearnerWritingQuestionGroupDetailResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.test.*;
+import com.hcmute.fit.toeicrise.dtos.responses.test.speaking.SpeakingPartResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.test.speaking.SpeakingQuestionGroupResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.test.speaking.SpeakingQuestionResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.test.writing.WritingPartResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.test.writing.WritingQuestionGroupResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.test.writing.WritingQuestionResponse;
 import com.hcmute.fit.toeicrise.exceptions.AppException;
 import com.hcmute.fit.toeicrise.models.entities.*;
-import com.hcmute.fit.toeicrise.models.enums.ETestStatus;
+import com.hcmute.fit.toeicrise.models.enums.EPart;
 import com.hcmute.fit.toeicrise.models.enums.ErrorCode;
 import com.hcmute.fit.toeicrise.models.mappers.QuestionGroupMapper;
 import com.hcmute.fit.toeicrise.models.mappers.QuestionMapper;
 import com.hcmute.fit.toeicrise.repositories.QuestionGroupRepository;
-import com.hcmute.fit.toeicrise.repositories.TestRepository;
+import com.hcmute.fit.toeicrise.services.interfaces.ICloudinaryService;
 import com.hcmute.fit.toeicrise.services.interfaces.IQuestionGroupService;
-import com.hcmute.fit.toeicrise.dtos.responses.test.PartResponse;
-import com.hcmute.fit.toeicrise.dtos.responses.test.QuestionGroupResponse;
-import com.hcmute.fit.toeicrise.dtos.responses.test.QuestionResponse;
 import com.hcmute.fit.toeicrise.models.mappers.PartMapper;
 import com.hcmute.fit.toeicrise.services.interfaces.IQuestionService;
-import com.hcmute.fit.toeicrise.services.interfaces.ITagService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.scheduling.annotation.Async;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -38,116 +42,148 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class QuestionGroupServiceImpl implements IQuestionGroupService {
-    private final TestRepository testRepository;
     private final QuestionGroupRepository questionGroupRepository;
     private final IQuestionService questionService;
+    private final ICloudinaryService cloudinaryService;
     private final CloudinaryUtil cloudinaryUtil;
     private final QuestionGroupMapper questionGroupMapper;
     private final PartMapper partMapper;
     private final QuestionMapper questionMapper;
-    private final ITagService tagService;
-
-    @Transactional(readOnly = true)
-    @Override
-    public List<PartResponse> getQuestionGroupsByTestIdGroupByPart(Long testId) {
-        List<QuestionGroup> questionGroups = questionGroupRepository.findByTest_IdOrderByPositionAsc(testId);
-
-        // Group question groups by part
-        Map<Part, List<QuestionGroup>> groupedByPart = questionGroups.stream()
-                .collect(Collectors.groupingBy(QuestionGroup::getPart));
-
-        // Convert the map to a list of PartResponse objects and sort by part name
-        return groupedByPart.entrySet().stream()
-                .map(entry -> {
-                    Part part = entry.getKey();
-                    List<QuestionGroup> groups = entry.getValue();
-
-                    // Map each QuestionGroup to QuestionGroupResponse with questions
-                    List<QuestionGroupResponse> questionGroupResponses = groups.stream()
-                            .map(group -> {
-                                // Fetch questions for this question group
-                                List<QuestionResponse> questions = questionService.getQuestionsByQuestionGroupId(group.getId());
-                                return questionGroupMapper.toResponse(group, questions);
-                            })
-                            .toList();
-
-                    // Create and return a PartResponse
-                    return partMapper.toPartResponse(part, questionGroupResponses);
-                })
-                .sorted(Comparator.comparing(PartResponse::getName))
-                .toList();
-    }
 
     @Override
     @Transactional
     public QuestionGroup createQuestionGroup(Test test, Part part, QuestionExcelRequest questionExcelRequest) {
         QuestionGroup questionGroup = questionGroupMapper.toQuestionGroup(test, part, questionExcelRequest);
         questionGroup = questionGroupRepository.saveAndFlush(questionGroup);
+        log.info("Created question group: {}", questionGroup.getId());
         return questionGroup;
     }
 
     @Transactional
     @Override
-    public void updateQuestionGroup(Long questionGroupId, QuestionGroupUpdateRequest request) {
-        QuestionGroup questionGroup = questionGroupRepository.findById(questionGroupId)
-                .orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question group with ID " + questionGroupId));
+    public QuestionGroup createQuestionGroup(Test test, Part part, SpeakingQuestionExcelRequest questionExcelRequest) {
+        QuestionGroup questionGroup = questionGroupMapper.toQuestionGroup(test, part, questionExcelRequest);
+        questionGroup = questionGroupRepository.saveAndFlush(questionGroup);
+        log.info("Created question group: {}", questionGroup.getId());
+        return questionGroup;
+    }
+
+    @Transactional
+    @Override
+    public QuestionGroup createQuestionGroup(Test test, Part part, WritingQuestionExcelRequest questionExcelRequest) {
+        QuestionGroup questionGroup = questionGroupMapper.toQuestionGroup(test, part, questionExcelRequest);
+        questionGroup = questionGroupRepository.saveAndFlush(questionGroup);
+        log.info("Created question group: {}", questionGroup.getId());
+        return questionGroup;
+    }
+
+    @Transactional
+    @Override
+    public QuestionGroupResponse updateQuestionGroup(Long questionGroupId, QuestionGroupUpdateRequest request) {
+        QuestionGroup questionGroup = getQuestionGroupEntity(questionGroupId);
         updateQuestionGroupWithEntity(questionGroup, request);
+        log.info("Updated question group: {}", questionGroup.getId());
+        List<QuestionResponse> questionResponses = questionGroup.getQuestions().stream()
+                .map(questionMapper::toQuestionResponse).toList();
+        return questionGroupMapper.toResponse(getQuestionGroupEntity(questionGroupId), questionResponses);
     }
 
     @Override
+    public SpeakingQuestionGroupResponse updateSpeakingQuestionGroup(Long questionGroupId, SWQuestionGroupUpdateRequest request) {
+        QuestionGroup questionGroup = getQuestionGroupEntity(questionGroupId);
+        Part part = questionGroup.getPart();
+
+        validateImageForPart(part, request.getImage(), request.getImageUrl());
+        validatePassageForPart(part, request.getPassage());
+
+        questionGroup.setImageUrl(cloudinaryService.processMediaFile(
+                request.getImage(), request.getImageUrl(), questionGroup.getImageUrl()));
+        questionGroup.setPassage(request.getPassage());
+
+        questionGroupRepository.save(questionGroup);
+        log.info("Update question group successfully with ID: {}", questionGroup.getId());
+        questionService.changeTestStatusToPending(questionGroup.getTest());
+        log.info("Updated question group: {}", questionGroup.getId());
+
+        List<SpeakingQuestionResponse> questionResponses = questionGroup.getQuestions().stream()
+                .map(questionMapper::toSpeakingQuestionResponse).toList();
+        return questionGroupMapper.toSpeakingQuestionGroupResponse(getQuestionGroupEntity(questionGroupId), questionResponses);
+    }
+
+    @Override
+    public WritingQuestionGroupResponse updateWritingQuestionGroup(Long questionGroupId, SWQuestionGroupUpdateRequest request) {
+        QuestionGroup questionGroup = getQuestionGroupEntity(questionGroupId);
+        Part part = questionGroup.getPart();
+
+        validateImageForPart(part, request.getImage(), request.getImageUrl());
+        validatePassageForPart(part, request.getPassage());
+
+        questionGroup.setImageUrl(cloudinaryService.processMediaFile(
+                request.getImage(), request.getImageUrl(), questionGroup.getImageUrl()));
+        questionGroup.setPassage(request.getPassage());
+
+        questionGroupRepository.save(questionGroup);
+        log.info("Update question group successfully with ID: {}", questionGroup.getId());
+        questionService.changeTestStatusToPending(questionGroup.getTest());
+        log.info("Updated question group: {}", questionGroup.getId());
+
+        List<WritingQuestionResponse> questionResponses = questionGroup.getQuestions().stream()
+                .map(questionMapper::toWritingQuestionResponse).toList();
+        return questionGroupMapper.toWritingQuestionGroupResponse(getQuestionGroupEntity(questionGroupId), questionResponses);
+    }
+
+    @Override
+    @Transactional
     public void updateQuestionGroupWithEntity(QuestionGroup questionGroup, QuestionGroupUpdateRequest request) {
         Part part = questionGroup.getPart();
 
-        // Validate
         validateAudioForPart(part, request.getAudio(), request.getAudioUrl());
         validateImageForPart(part, request.getImage(), request.getImageUrl());
         validatePassageForPart(part, request.getPassage());
 
-        // Update question group
-        // Handle audio file
-        questionGroup.setAudioUrl(processMediaFile(
+        questionGroup.setAudioUrl(cloudinaryService.processMediaFile(
                 request.getAudio(), request.getAudioUrl(), questionGroup.getAudioUrl()));
-        questionGroup.setImageUrl(processMediaFile(
+        questionGroup.setImageUrl(cloudinaryService.processMediaFile(
                 request.getImage(), request.getImageUrl(), questionGroup.getImageUrl()));
         questionGroup.setPassage(request.getPassage());
         questionGroup.setTranscript(request.getTranscript());
 
         questionGroupRepository.save(questionGroup);
-
-        // Set test status to PENDING
-        changeTestStatusToPending(questionGroup);
-    }
-
-    @Override
-    public QuestionGroup getQuestionGroup(Long questionGroupId) {
-        return questionGroupRepository.findById(questionGroupId).orElse(null);
+        log.info("Update question group successfully with ID: {}", questionGroup.getId());
+        questionService.changeTestStatusToPending(questionGroup.getTest());
     }
 
     @Override
     public QuestionGroupResponse getQuestionGroupResponse(Long questionGroupId) {
         List<QuestionResponse> questions = questionService.getQuestionsByQuestionGroupId(questionGroupId);
-        return questionGroupMapper.toResponse(getQuestionGroup(questionGroupId), questions);
+        return questionGroupMapper.toResponse(getQuestionGroupEntity(questionGroupId), questions);
+    }
+
+    @Override
+    public SpeakingQuestionGroupResponse getSpeakingQuestionGroupResponse(Long questionGroupId) {
+        List<SpeakingQuestionResponse> questions = questionService.getSpeakingQuestionsByQuestionGroupId(questionGroupId);
+        return questionGroupMapper.toSpeakingQuestionGroupResponse(getQuestionGroupEntity(questionGroupId), questions);
+    }
+
+    @Override
+    public WritingQuestionGroupResponse getWritingQuestionGroupResponse(Long questionGroupId) {
+        List<WritingQuestionResponse> questions = questionService.getWritingQuestionsByQuestionGroupId(questionGroupId);
+        return questionGroupMapper.toWritingQuestionGroupResponse(getQuestionGroupEntity(questionGroupId), questions);
     }
 
     @Override
     public QuestionGroup getQuestionGroupEntity(Long questionGroupId) {
         return questionGroupRepository.findById(questionGroupId)
-                .orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question group with ID " + questionGroupId));
-    }
-
-    @Override
-    public String getPartNameByQuestionGroupId(Long questionGroupId) {
-        QuestionGroup questionGroup = questionGroupRepository.findById(questionGroupId)
-                .orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question group with ID " + questionGroupId));
-        return questionGroup.getPart().getName();
+                .orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question group"));
     }
 
     @Override
     public Map<Long, String> getPartNamesByQuestionGroupIds(Set<Long> questionGroupIds) {
         if (questionGroupIds.isEmpty())
             return Collections.emptyMap();
-        return questionGroupRepository.findAllById(questionGroupIds)
+        return questionGroupRepository.findAllByIdWithPart(questionGroupIds)
                 .stream()
                 .collect(Collectors.toMap(
                         QuestionGroup::getId,
@@ -162,279 +198,191 @@ public class QuestionGroupServiceImpl implements IQuestionGroupService {
 
     @Override
     public void checkQuestionGroupsExistByIds(List<Long> ids) {
+        Set<Long> inputIds = new HashSet<>(ids);
         Set<Long> existingIds = questionGroupRepository.findExistingIdsByIds(ids);
-        for (Long id : ids) {
-            if (!existingIds.contains(id)) {
-                throw new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question group");
-            }
-        }
-    }
-
-    private String processMediaFile(MultipartFile newFile, String newUrl, String oldUrl) {
-        boolean hasFile = newFile != null && !newFile.isEmpty();
-        boolean hasUrl = newUrl != null && !newUrl.isBlank();
-
-        if (hasFile) {
-            // If there's an old file in Cloudinary, update it
-            if (oldUrl != null && cloudinaryUtil.isCloudinaryUrl(oldUrl)) {
-                return cloudinaryUtil.updateFile(newFile, oldUrl);
-            }
-            return cloudinaryUtil.uploadFile(newFile);
-        }
-        if (hasUrl) {
-            // If the URL has changed and the old file is in Cloudinary, delete the old file
-            if (oldUrl != null && cloudinaryUtil.isCloudinaryUrl(oldUrl) && !oldUrl.equals(newUrl)) {
-                cloudinaryUtil.deleteFile(oldUrl);
-            }
-            return newUrl;
-        }
-        // If neither new file nor new URL is provided, delete the old file if it exists
-        if (oldUrl != null && cloudinaryUtil.isCloudinaryUrl(oldUrl)) {
-            cloudinaryUtil.deleteFile(oldUrl);
-        }
-        return null;
+        List<Long> missingIds = inputIds.stream().filter(id -> !existingIds.contains(id)).toList();
+        if (!missingIds.isEmpty())
+            throw new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question group");
     }
 
     private void validateAudioForPart(Part part, MultipartFile audio, String audioUrl) {
-        boolean isListening = isListeningPart(part);
+        EPart ePart = EPart.getEPart(part.getName());
         boolean hasAudioFile = audio != null && !audio.isEmpty();
         boolean hasAudioUrl = audioUrl != null && !audioUrl.isBlank();
 
-        // Non-listening parts should not have audio
-        if (!isListening && (hasAudioFile || hasAudioUrl)) {
+        if (!ePart.isRequiredAudio() && (hasAudioFile || hasAudioUrl))
             throw new AppException(ErrorCode.INVALID_REQUEST, "Audio should not be provided for non-listening parts.");
-        }
-        // Listening parts require audio
-        if (isListening && !hasAudioFile && !hasAudioUrl) {
+        if (ePart.isRequiredAudio() && !hasAudioFile && !hasAudioUrl)
             throw new AppException(ErrorCode.INVALID_REQUEST, "Audio is required for listening parts.");
-        }
-        // Validate audio file and URL
         if (hasAudioFile) {
-            if (audio.getSize() > Constant.QUESTION_GROUP_AUDIO_MAX_SIZE) {
-                throw new AppException(ErrorCode.INVALID_REQUEST, "Audio file size exceeds the maximum limit.");
-            }
+            if (audio.getSize() > Constant.QUESTION_GROUP_AUDIO_MAX_SIZE)
+                throw new AppException(ErrorCode.FILE_SIZE_EXCEEDED);
             cloudinaryUtil.validateAudioFile(audio);
         }
         if (hasAudioUrl) cloudinaryUtil.validateAudioURL(audioUrl);
     }
 
     private void validateImageForPart(Part part, MultipartFile image, String imageUrl) {
+        EPart ePart = EPart.getEPart(part.getName());
         boolean hasImageFile = image != null && !image.isEmpty();
         boolean hasImageUrl = imageUrl != null && !imageUrl.isBlank();
-        // Specific part rules
-        // Part 1 requires an image
-        if (part.getName().contains("1") && (!hasImageFile && !hasImageUrl)) {
+
+        if (ePart.isRequiredImage() && (!hasImageFile && !hasImageUrl))
             throw new AppException(ErrorCode.INVALID_REQUEST, "Image is required for part " + part.getName() + ".");
-        }
-        // Parts 2, 3, 5, and 6 should not have images
-        if (part.getName().contains("2") || part.getName().contains("3") || part.getName().contains("5") || part.getName().contains("6")) {
-            if (hasImageFile || hasImageUrl) {
-                throw new AppException(ErrorCode.INVALID_REQUEST, "Image should not be provided for part " + part.getName() + ".");
-            }
-        }
-        // Validate image file and URL
+        if (!ePart.allowImage() && (hasImageFile || hasImageUrl))
+            throw new AppException(ErrorCode.INVALID_REQUEST, "Image should not be provided for part " + part.getName() + ".");
         if (hasImageFile) {
-            if (image.getSize() > Constant.QUESTION_GROUP_IMAGE_MAX_SIZE) {
-                throw new AppException(ErrorCode.INVALID_REQUEST, "Image file size exceeds the maximum limit.");
-            }
+            if (image.getSize() > Constant.QUESTION_GROUP_IMAGE_MAX_SIZE)
+                throw new AppException(ErrorCode.IMAGE_SIZE_EXCEEDED);
             cloudinaryUtil.validateImageFile(image);
         }
         if (hasImageUrl) cloudinaryUtil.validateImageURL(imageUrl);
     }
 
-
     private void validatePassageForPart(Part part, String passage) {
-        // Parts 6 and 7 require a passage
-        // Other parts should not have a passage
-        if (part.getName().contains("6") || part.getName().contains("7")) {
-            if (passage == null || passage.isBlank()) {
+        EPart ePart = EPart.getEPart(part.getName());
+        if (ePart.isRequiredPassage()) {
+            if (passage == null || passage.isBlank())
                 throw new AppException(ErrorCode.INVALID_REQUEST, "Passage is required for parts 6 and 7.");
-            }
-        } else if (passage != null && !passage.isBlank()) {
+        } else if (passage != null && !passage.isBlank())
             throw new AppException(ErrorCode.INVALID_REQUEST, "Passage should not be provided for listening parts or part 5.");
-        }
     }
 
     @Override
     public boolean isListeningPart(Part part) {
-        return part.getName().contains("1") ||
-                part.getName().contains("2") ||
-                part.getName().contains("3") ||
-                part.getName().contains("4");
+        EPart ePart = EPart.getEPart(part.getName());
+        return ePart.isRequiredAudio();
     }
 
     @Transactional(readOnly = true)
     @Override
     public List<LearnerTestPartResponse> getQuestionGroupsByTestIdGroupByParts(Long testId, List<Long> partIds) {
-        List<QuestionGroup> questionGroups = questionGroupRepository.findByTest_IdAndPart_IdOrderByPositionAsc(testId, partIds);
-        Map<Part, List<QuestionGroup>> groupedByPart = questionGroups.stream()
-                .distinct().collect(Collectors.groupingBy(QuestionGroup::getPart));
-        return groupedByPart.entrySet().stream().map(entry -> {
-            Part part = entry.getKey();
-            List<QuestionGroup> questionGroupList = entry.getValue();
-            List<LearnerTestQuestionGroupResponse> questionGroupResponses = questionGroupList
-                    .stream()
-                    .sorted(Comparator.comparing(QuestionGroup::getPosition))
+        List<QuestionGroup> questionGroups = questionGroupRepository.findByTestIdAndPartIdsWithQuestionsAndPart(testId, partIds);
+
+        return HelperUtil.groupByPartAndMap(questionGroups, (part, groups) -> {
+            List<LearnerTestQuestionGroupWithoutTranscriptResponse> groupResponses = groups.stream().sorted(Comparator.comparing(QuestionGroup::getPosition))
                     .map(group -> {
-                        List<LearnerTestQuestionResponse> questionResponses = group.getQuestions()
-                                .stream().sorted(Comparator.comparing(Question::getPosition))
-                                .map(questionMapper::toLearnerTestQuestionResponse)
-                                .toList();
-                        List<Object> questionAsObject = new ArrayList<>(questionResponses);
-                        LearnerTestQuestionGroupResponse learnerTestQuestionGroupResponse = questionGroupMapper.toLearnerTestQuestionGroupResponse(group);
-                        learnerTestQuestionGroupResponse.setQuestions(questionAsObject);
-                        return learnerTestQuestionGroupResponse;
-                    }).toList();
+                        List<LearnerTestQuestionResponse> questionResponses = group.getQuestions().stream().sorted(Comparator.comparing(Question::getPosition))
+                                .map(questionMapper::toLearnerTestQuestionResponse).toList();
+
+                        LearnerTestQuestionGroupWithoutTranscriptResponse groupResponse = questionGroupMapper.toLearnerTestQuestionGroupWithoutTranscriptResponse(group);
+                        groupResponse.setQuestions(new ArrayList<>(questionResponses));
+                        return groupResponse;
+                    })
+                    .toList();
             LearnerTestPartResponse partResponse = partMapper.toLearnerTestPartResponse(part);
-            partResponse.setQuestionGroups(questionGroupResponses);
+            partResponse.setQuestionGroups(new ArrayList<>(groupResponses));
             return partResponse;
-        }).sorted(Comparator.comparing(LearnerTestPartResponse::getPartName)).toList();
+        }, Comparator.comparing(LearnerTestPartResponse::getPartName));
     }
 
     @Override
-    public MiniTestOverallResponse getMiniTestOverallResponse(MiniTestRequest request) {
-        List<Long> questionIds = request.getQuestionGroups().stream()
-                .flatMap(group -> group.getUserAnswerRequests().stream())
-                .map(UserAnswerMiniTestRequest::getQuestionId)
-                .filter(Objects::nonNull)
-                .distinct().toList();
-
-        List<Question> questions = questionService.getQuestionsWithGroupsByIds(questionIds);
-        questionService.validateQuestion(questionIds, questions);
-        Map<Long, Question> questionMap = questions.stream()
-                .collect(Collectors.toMap(Question::getId, q -> q));
-        MiniTestOverallResponse miniTestOverallResponse = calculatorAnswerMiniTest(request, questionMap);
-        miniTestOverallResponse.setTotalQuestions(questions.size());
-        return miniTestOverallResponse;
-    }
-
-    private MiniTestOverallResponse calculatorAnswerMiniTest(MiniTestRequest miniTestRequest, Map<Long, Question> questionMap) {
-        int correctAnswers = 0;
-        Map<QuestionGroup, List<MiniTestAnswerQuestionResponse>> miniTestAnswerQuestionResponses = new LinkedHashMap<>();
-        int groupPosition = 1;
-        long globalQuestionPosition = 1;
-
-        for (MiniQuestionGroupRequest questionGroupRequest : miniTestRequest.getQuestionGroups()) {
-            if (questionGroupRequest.getQuestionGroupId() == null)
-                throw new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question group");
-
-            for (UserAnswerMiniTestRequest userAnswerRequest : questionGroupRequest.getUserAnswerRequests()) {
-                if (userAnswerRequest.getQuestionId() == null)
-                    throw new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question");
-                Question question = questionMap.get(userAnswerRequest.getQuestionId());
-                if (question == null) throw new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question");
-                if (!question.getQuestionGroup().getId().equals(questionGroupRequest.getQuestionGroupId()))
-                    throw new AppException(ErrorCode.VALIDATION_ERROR);
-
-                boolean isCorrect = userAnswerRequest.getAnswer() != null && question.getCorrectOption() != null
-                        && question.getCorrectOption().equals(userAnswerRequest.getAnswer());
-                if (isCorrect) correctAnswers++;
-
-                MiniTestAnswerQuestionResponse miniTestAnswerQuestionResponse = questionMapper.toMiniTestAnswerQuestionResponse(question);
-                miniTestAnswerQuestionResponse.setUserAnswer(userAnswerRequest.getAnswer());
-                miniTestAnswerQuestionResponse.setIsCorrect(isCorrect);
-
-                miniTestAnswerQuestionResponses.computeIfAbsent(question.getQuestionGroup(), _ -> new ArrayList<>()).add(miniTestAnswerQuestionResponse);
-            }
-        }
-        List<MiniTestQuestionGroupAnswerResponse> groupResponses = new ArrayList<>();
-        for (Map.Entry<QuestionGroup, List<MiniTestAnswerQuestionResponse>> entry : miniTestAnswerQuestionResponses.entrySet()) {
-            MiniTestQuestionGroupAnswerResponse miniTestQuestionGroupResponse = questionGroupMapper.toMiniTestQuestionGroupAnswerResponse(entry.getKey());
-            miniTestQuestionGroupResponse.setIndex(groupPosition++);
-            for (MiniTestAnswerQuestionResponse miniTestAnswerQuestionResponse : entry.getValue()) {
-                miniTestAnswerQuestionResponse.setIndex(globalQuestionPosition++);
-            }
-            miniTestQuestionGroupResponse.setQuestions(entry.getValue());
-            groupResponses.add(miniTestQuestionGroupResponse);
-        }
-        return MiniTestOverallResponse.builder()
-                .correctAnswers(correctAnswers)
-                .questionGroups(groupResponses).build();
+    public List<LearnerSpeakingPartDetailResponse> getLearnerSpeakingPartsByTestIdGroupByParts(Long testId, List<Long> partIds) {
+        List<QuestionGroup> questionGroups = questionGroupRepository.findByTestIdAndPartIdsWithQuestionsAndPart(testId, partIds);
+        return questionGroups.stream()
+                .collect(Collectors.groupingBy(QuestionGroup::getPart))
+                .entrySet()
+                .stream()
+                .sorted(Comparator.comparing(e -> EPart.getEPart(e.getKey().getName())))
+                .map(entry -> {
+                    Part part = entry.getKey();
+                    List<LearnerSpeakingQuestionGroupDetailResponse> groupDetails = entry.getValue().stream()
+                            .sorted(Comparator.comparing(QuestionGroup::getPosition))
+                            .map(group -> {
+                                List<LearnerSpeakingQuestionDetailResponse> questionDetails = group.getQuestions().stream()
+                                        .sorted(Comparator.comparing(Question::getPosition))
+                                        .map(questionMapper::toLearnerSpeakingQuestionDetailResponse)
+                                        .toList();
+                                return questionGroupMapper.toLearnerSpeakingQuestionGroupDetailResponse(group, questionDetails);
+                            })
+                            .toList();
+                    return partMapper.toLearnerSpeakingPartDetailResponse(part, groupDetails);
+                })
+                .toList();
     }
 
     @Override
-    public MiniTestResponse getLearnerTestQuestionGroupResponsesByTags(Long partId, Set<Long> tagIds, int numberQuestion) {
-        tagService.checkExistsIds(tagIds);
-
-        Map<QuestionGroup, List<Question>> groupEntities = getAllQuestionGroup(partId, tagIds, numberQuestion);
-        groupEntities.values().forEach(questions -> questions.sort(Comparator.comparing(Question::getPosition)));
-        List<MiniTestQuestionGroupResponse> miniTestQuestionGroupResponses = new ArrayList<>();
-        int groupPosition = 1;
-        long globalQuestionPosition = 1;
-
-        for (Map.Entry<QuestionGroup, List<Question>> entry : groupEntities.entrySet()) {
-            MiniTestQuestionGroupResponse groupResponse = questionGroupMapper.toMiniTestQuestionGroupResponse(entry.getKey());
-            groupResponse.setIndex(groupPosition++);
-            List<MiniTestQuestionResponse> questionResponses = new ArrayList<>();
-            for (Question question : entry.getValue()) {
-                MiniTestQuestionResponse questionResponse = questionMapper.toMiniTestQuestionResponse(question);
-                questionResponse.setIndex(globalQuestionPosition++);
-                questionResponses.add(questionResponse);
-            }
-            groupResponse.setQuestions(questionResponses);
-            miniTestQuestionGroupResponses.add(groupResponse);
-        }
-        return MiniTestResponse.builder()
-                .questionGroups(miniTestQuestionGroupResponses)
-                .totalQuestions(globalQuestionPosition - 1).build();
+    public List<LearnerWritingPartDetailResponse> getLearnerWritingPartsByTestIdGroupByParts(Long testId, List<Long> partIds) {
+        List<QuestionGroup> questionGroups = questionGroupRepository.findByTestIdAndPartIdsWithQuestionsAndPart(testId, partIds);
+        return questionGroups.stream()
+                .collect(Collectors.groupingBy(QuestionGroup::getPart))
+                .entrySet()
+                .stream()
+                .sorted(Comparator.comparing(e -> EPart.getEPart(e.getKey().getName())))
+                .map(entry -> {
+                    Part part = entry.getKey();
+                    List<LearnerWritingQuestionGroupDetailResponse> groupDetails = entry.getValue().stream()
+                            .sorted(Comparator.comparing(QuestionGroup::getPosition))
+                            .map(group -> {
+                                List<LearnerWritingQuestionDetailResponse> questionDetails = group.getQuestions().stream()
+                                        .sorted(Comparator.comparing(Question::getPosition))
+                                        .map(questionMapper::toLearnerWritingQuestionDetailResponse)
+                                        .toList();
+                                return questionGroupMapper.toLearnerWritingQuestionGroupDetailResponse(group, questionDetails);
+                            })
+                            .toList();
+                    return partMapper.toLearnerWritingPartDetailResponse(part, groupDetails);
+                })
+                .toList();
     }
 
+    @Transactional(readOnly = true)
     @Override
-    public List<QuestionGroup> findAllByIdWithPart(Set<Long> questionIds) {
-        return questionGroupRepository.findAllByIdWithGroups(questionIds);
+    public List<PartResponse> getQuestionGroupsByTestIdGroupByPart(Long testId) {
+        List<QuestionGroup> questionGroups = questionGroupRepository.findByTestIdWithPart(testId);
+        Map<Long, List<Question>> questionsByGroupId = attachQuestionsToGroups(questionGroups);
+
+        return HelperUtil.groupByPartAndMap(questionGroups, (part, groups) -> {
+            List<QuestionGroupResponse> groupResponses = groups.stream().map(group -> {
+                List<Question> groupQuestions = questionsByGroupId.getOrDefault(group.getId(), Collections.emptyList());
+                List<QuestionResponse> questionResponses = groupQuestions.stream().sorted(Comparator.comparing(Question::getPosition))
+                        .map(questionMapper::toQuestionResponse).toList();
+                return questionGroupMapper.toResponse(group, questionResponses);
+            }).toList();
+            return partMapper.toPartResponse(part, groupResponses);
+        }, Comparator.comparing(PartResponse::getName));
     }
 
-    private Map<QuestionGroup, List<Question>> getAllQuestionGroup(Long partId, Set<Long> tagIds, int numberQuestion) {
-        List<Question> allQuestions = questionService.getAllQuestionsByPartAndTags(tagIds, partId);
-        ShuffleUtil.shuffle(allQuestions);
-        Map<Long, List<Question>> questionsByTag = new LinkedHashMap<>();
+    @Transactional(readOnly = true)
+    @Override
+    public List<SpeakingPartResponse> getSpeakingQuestionGroupsByTestIdGroupByPart(Long testId) {
+        List<QuestionGroup> questionGroups = questionGroupRepository.findByTestIdWithPart(testId);
+        Map<Long, List<Question>> questionsByGroupId = attachQuestionsToGroups(questionGroups);
 
-        for (Long tagId : tagIds) {
-            List<Question> tagQuestions = allQuestions.stream().filter(
-                    question -> question.getTags().stream().anyMatch(
-                            tag -> tag.getId().equals(tagId))).collect(Collectors.toList());
-            questionsByTag.put(tagId, tagQuestions);
-        }
-        List<Question> selectedQuestions = new ArrayList<>();
-        Set<Long> usedQuestionIds = new HashSet<>();
-        Map<Long, Integer> tagIndices = new HashMap<>();
-        tagIds.forEach(tagId -> tagIndices.put(tagId, 0));
-
-        while (selectedQuestions.size() < numberQuestion) {
-            boolean addedInThisRound = false;
-
-            for (Long tagId : tagIds) {
-                if (selectedQuestions.size() >= numberQuestion)
-                    break;
-                List<Question> tagQuestions = questionsByTag.get(tagId);
-                if (tagQuestions == null || tagQuestions.isEmpty())
-                    throw new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question");
-                Integer currentIndex = tagIndices.get(tagId);
-
-                while (currentIndex < tagQuestions.size()) {
-                    Question tagQuestion = tagQuestions.get(currentIndex);
-                    currentIndex++;
-                    if (!usedQuestionIds.contains(tagQuestion.getId())) {
-                        selectedQuestions.add(tagQuestion);
-                        usedQuestionIds.add(tagQuestion.getId());
-                        addedInThisRound = true;
-                        break;
-                    }
-                }
-                tagIndices.put(tagId, currentIndex);
-            }
-            if (!addedInThisRound)
-                break;
-        }
-        return selectedQuestions.stream().collect(Collectors.groupingBy(Question::getQuestionGroup, LinkedHashMap::new, Collectors.toList()));
+        return HelperUtil.groupByPartAndMap(questionGroups, (part, groups) -> {
+            List<SpeakingQuestionGroupResponse> groupResponses = groups.stream().map(group -> {
+                List<Question> groupQuestions = questionsByGroupId.getOrDefault(group.getId(), Collections.emptyList());
+                List<SpeakingQuestionResponse> questionResponses = groupQuestions.stream().sorted(Comparator.comparing(Question::getPosition))
+                        .map(questionMapper::toSpeakingQuestionResponse).toList();
+                return questionGroupMapper.toSpeakingQuestionGroupResponse(group, questionResponses);
+            }).toList();
+            return partMapper.toSpeakingPartResponse(part, groupResponses);
+        }, Comparator.comparing(SpeakingPartResponse::getName));
     }
 
-    @Async
-    public void changeTestStatusToPending(QuestionGroup questionGroup) {
-        Test test = questionGroup.getTest();
-        if (test.getStatus() != ETestStatus.PENDING) {
-            test.setStatus(ETestStatus.PENDING);
-            testRepository.save(test);
-        }
+    @Transactional(readOnly = true)
+    @Override
+    public List<WritingPartResponse> getWritingQuestionGroupsByTestIdGroupByPart(Long testId) {
+        List<QuestionGroup> questionGroups = questionGroupRepository.findByTestIdWithPart(testId);
+        Map<Long, List<Question>> questionsByGroupId = attachQuestionsToGroups(questionGroups);
+
+        return HelperUtil.groupByPartAndMap(questionGroups, (part, groups) -> {
+            List<WritingQuestionGroupResponse> groupResponses = groups.stream().map(group -> {
+                List<Question> groupQuestions = questionsByGroupId.getOrDefault(group.getId(), Collections.emptyList());
+                List<WritingQuestionResponse> questionResponses = groupQuestions.stream().sorted(Comparator.comparing(Question::getPosition))
+                        .map(questionMapper::toWritingQuestionResponse).toList();
+                return questionGroupMapper.toWritingQuestionGroupResponse(group, questionResponses);
+            }).toList();
+            return partMapper.toWritingPartResponse(part, groupResponses);
+        }, Comparator.comparing(WritingPartResponse::getName));
+    }
+
+    public Map<Long, List<Question>> attachQuestionsToGroups(List<QuestionGroup> questionGroups) {
+        Set<Long> groupIds = questionGroups.stream().map(QuestionGroup::getId).collect(Collectors.toSet());
+        if (groupIds.isEmpty())
+            return Collections.emptyMap();
+
+        return questionService.findAllQuestionByIdWithTags(groupIds).stream()
+                .collect(Collectors.groupingBy(q -> q.getQuestionGroup().getId()));
     }
 }
